# LogIngestor

./: CMakeLists.txt  Dockerfile  LICENSE.md  README.md  run.sh
LogClient/: CMakeLists.txt  client.cpp  client.h  main.cpp
LogServer/: CMakeLists.txt  main.cpp  messageframer.cpp  messageframer.h  server.cpp  server.h
